# launcher-cpp

./: .gitignore  CMakeLists.txt  Flarial Minimal.aps  Flarial Minimal.rc  Flarial Minimal.sln  Flarial Minimal.vcxproj  Flarial Minimal.vcxproj.filters  README.md  icon.rc  main.cpp  resource.h
installer-cpp/: CMakeLists.txt  main.cpp
minimal-cpp/: CMakeLists.txt  icon.rc  main.cpp
